register user and login

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,32 +16,70 @@
     <p>If this button appears blue, you've done it!</p>
   </div>
 
-  <button type="button" class="btn btn-primary mr-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Get in!</button>
+  <button type="button" class="btn btn-primary mr-3" data-bs-toggle="modal" data-bs-target="#signinModal">Get in!</button>
+  <button type="button" class="btn btn-secondary mr-3" data-bs-toggle="modal" data-bs-target="#signupModal">Not registered yet?</button>
 
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="signinModal" tabindex="-1" aria-labelledby="signinModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="signinModalLabel">Enter to your database</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
 
-          <form method='post'>
+          <form method='post' action='auth/signin'>
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email">
+              <input type="email" class="form-control" id="email" name='email'>
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
-              <input type="text" class="form-control" id="password">
+              <input type="text" class="form-control" id="password" name='password'>
             </div>
+
+            <div class="">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary" onclick=''>Signin</button>
+            </div>
+
           </form>
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancels</button>
-          <button type="button" class="btn btn-primary" onclick=''>Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="signupModalLabel">Register</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+          <form action='auth/signup' method='post' id='signup_form'>
+            <!-- Email input -->
+            <div class="form-group">
+              <input type="email" id="email" class="form-control" name='email' />
+              <label class="form-label" for="email">Email address</label>
+            </div>
+
+            <!-- Password input -->
+            <div class="form-group">
+              <input type="password" id="password" class="form-control" name='password' />
+              <label class="form-label" for="password">Password</label>
+            </div>
+
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+          </form>
+
+        </div>
+        <div class="modal-footer">
         </div>
       </div>
     </div>
