--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,13 +1,7 @@
 <div class="col-md-8 py-5 px-3 mx-auto">
 
   <header class="pb-3 mb-5 border-bottom">
-    <h1 class="h4">
-      <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-inline-block mr-2" viewBox="0 0 118 94" role="img">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
-        <span>CD Starter</span>
-      </a>
-    </h1>
+    {{> page/logo}}
   </header>
 
   <h1>Get started with Cloud Database</h1>
@@ -16,74 +10,10 @@
     <p>If this button appears blue, you've done it!</p>
   </div>
 
-  <button type="button" class="btn btn-primary mr-3" data-bs-toggle="modal" data-bs-target="#signinModal">Get in!</button>
-  <button type="button" class="btn btn-secondary mr-3" data-bs-toggle="modal" data-bs-target="#signupModal">Not registered yet?</button>
+  <a href="login" class="btn btn-primary mr-3" >Get in!</a>
+  <a href="register" class="btn btn-secondary mr-3" >Not registered yet?</a>
 
-  <div class="modal fade" id="signinModal" tabindex="-1" aria-labelledby="signinModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="signinModalLabel">Enter to your database</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
 
-          <form method='post' action='auth/signin'>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" name='email'>
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input type="text" class="form-control" id="password" name='password'>
-            </div>
-
-            <div class="">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-primary" onclick=''>Signin</button>
-            </div>
-
-          </form>
-
-        </div>
-        <div class="modal-footer">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="signupModalLabel">Register</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-
-          <form action='auth/signup' method='post' id='signup_form'>
-            <!-- Email input -->
-            <div class="form-group">
-              <input type="email" id="email" class="form-control" name='email' />
-              <label class="form-label" for="email">Email address</label>
-            </div>
-
-            <!-- Password input -->
-            <div class="form-group">
-              <input type="password" id="password" class="form-control" name='password' />
-              <label class="form-label" for="password">Password</label>
-            </div>
-
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-          </form>
-
-        </div>
-        <div class="modal-footer">
-        </div>
-      </div>
-    </div>
-  </div>
 
   <hr class="my-5 w-25 mx-0">
 
