--- a/frontend/src/app/login/login-form.component.html
+++ b/frontend/src/app/login/login-form.component.html
@@ -37,8 +37,10 @@
         </div>
       </div>
     </mat-card-content>
+
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">Submit</button>
+      <button  mat-raised-button color="primary" type="submit">Submit</button>
+      <a href='/register'>Register</a>
     </mat-card-actions>
   </mat-card>
 </form>
