--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,1 +1,65 @@
-<p>register works!</p>
+
+<mat-card *ngIf="errorMessage && (registerForm.touched || registerForm.dirty)" class="cross-validation-error-message alert alert-danger">
+  {{errorMessage}}
+</mat-card>
+
+<form [formGroup]="registerForm" novalidate (ngSubmit)="onSubmit()">
+  <mat-card class="shipping-card">
+    <mat-card-header>
+      <mat-card-title>User Information</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+
+      <div class="row">
+        <div class='"col'>
+          <div class="row">
+            <mat-form-field class="full-width">
+              <input matInput placeholder="Email" formControlName="email"  type='email'>
+              <mat-error *ngIf="registerForm.controls['email'].hasError('required')">
+                Email is <strong>required</strong>
+              </mat-error>
+              <mat-error *ngIf="registerForm.controls['email'].hasError('email')">
+                Email field has incorrect format
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-form-field class="full-width">
+              <input matInput placeholder="Password" formControlName="password" minlength='6' type='password' (change)="onPasswordChange()">
+              <mat-error
+                *ngIf="registerForm.controls['password'].hasError('required')">
+                Password is <strong>required</strong>
+              </mat-error>
+              <mat-error
+                *ngIf="registerForm.controls['password'].hasError('minlength')">
+                Min length is 6 symbols
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <mat-form-field class="full-width">
+              <input matInput placeholder="Confirm password" formControlName="confirm_password" type="password" minlength='6' (change)="onPasswordChange()">
+              <mat-error
+                *ngIf="registerForm.controls['confirm_password'].hasError('required')">
+                Confirm password
+              </mat-error>
+              <mat-error
+                *ngIf="registerForm.controls['confirm_password'].hasError('minlength')">
+                Min length is 6 symbols
+              </mat-error>
+              <mat-error
+                *ngIf="registerForm.controls['confirm_password'].hasError('mismatch')">
+                Password doesn't match!
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button  mat-raised-button color="primary" type="submit">Submit</button>
+      <a href='/register'>Register</a>
+    </mat-card-actions>
+  </mat-card>
+</form>
