--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,5 +1,9 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+}
 
+.mat-sidenav-content{
+  background-color: #fff;
+}
