--- a/frontend/src/app/post-dialog/post-dialog.component.html
+++ b/frontend/src/app/post-dialog/post-dialog.component.html
@@ -2,10 +2,10 @@
 <div mat-dialog-content>
   <form class="example-form" (ngSubmit)="onSubmit()">
     <mat-form-field>
-      <input matInput placeholder="Key" type="text" required [(ngModel)]="blogPost.key" name="key">
+      <input matInput placeholder="Key" type="text" required [(ngModel)]="post.key" name="key">
     </mat-form-field>
     <mat-form-field>
-      <textarea matInput placeholder="Value" required [(ngModel)]="blogPost.value" name="value"></textarea>
+      <textarea matInput placeholder="Value" required [(ngModel)]="post.value" name="value"></textarea>
     </mat-form-field>
 
     <button mat-raised-button type="submit" color="primary">Save</button>
