--- a/frontend/src/app/post-dialog/post-dialog.component.css
+++ b/frontend/src/app/post-dialog/post-dialog.component.css
@@ -1,9 +1,9 @@
-.example-form {
+.post-form {
   display: flex;
   flex-direction: column;
 }
 
-.example-form > * {
+.post-form > * {
   width: 100%;
 }
 
