--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -16,9 +16,11 @@
             <h3>Recent Posts</h3>
           </mat-card-title>
           <mat-card-content>
+
             <div class="example-container mat-elevation-z8">
+              <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
               <mat-table #table [dataSource]="dataSource">
-                <ng-container matColumnDef="date_created">
+                <ng-container matColumnDef="createdAt">
                   <mat-header-cell *matHeaderCellDef> Date Created </mat-header-cell>
                   <mat-cell *matCellDef="let element"> {{element.createdAt | date:'dd.MM.YY HH:mm:ss' }} </mat-cell>
                 </ng-container>
@@ -45,6 +47,14 @@
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
               </mat-table>
+
+              <mat-paginator [length]=totalRows
+                             [pageSize]="10"
+                             [pageSizeOptions]=pageSizeOptions
+                             (page)="pageChanged($event)"
+                             aria-label="Select page">
+              </mat-paginator>
+
             </div>
           </mat-card-content>
         </mat-card>
